Added inventory UI, cart, Razorpay integration, and backend updates