@@ -2,6 +2,7 @@ package orderservice.security;
 
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.security.Keys;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
@@ -12,7 +13,9 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
+import javax.crypto.SecretKey;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.Collections;
 
 @Component
@@ -26,6 +29,10 @@ public class JWTFilter extends OncePerRequestFilter {
                                     HttpServletResponse response,
                                     FilterChain filterChain)
             throws ServletException, IOException {
+        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
+            filterChain.doFilter(request, response);
+            return;
+        }
 
         String authHeader = request.getHeader("Authorization");
 
@@ -36,20 +43,32 @@ public class JWTFilter extends OncePerRequestFilter {
             try {
 
                 Claims claims = Jwts.parserBuilder()
-                        .setSigningKey(SECRET.getBytes())
+                        .setSigningKey(getKey())
                         .build()
                         .parseClaimsJws(token)
                         .getBody();
 
-                // ✅ Extract userId from JWT claims
-                Long userId = Long.valueOf(claims.get("userId").toString());
+                Object userIdObj = claims.get("userId");
+                Object idObj = claims.get("id"); // fallback
 
-                // Store userId in SecurityContext
+                Long userId = 1L; // default
+                if (userIdObj != null) {
+                    userId = Long.valueOf(userIdObj.toString());
+                } else if (idObj != null) {
+                    userId = Long.valueOf(idObj.toString());
+                }
+
+                Object roleObj = claims.get("role");
+                String role = roleObj != null ? String.valueOf(roleObj) : "ROLE_USER";
+                if (!role.startsWith("ROLE_")) {
+                    role = "ROLE_" + role;
+                }
+
                 UsernamePasswordAuthenticationToken auth =
                         new UsernamePasswordAuthenticationToken(
                                 userId,
                                 null,
-                                Collections.emptyList()
+                                java.util.List.of(new org.springframework.security.core.authority.SimpleGrantedAuthority(role))
                         );
 
                 SecurityContextHolder.getContext().setAuthentication(auth);
@@ -60,5 +79,9 @@ public class JWTFilter extends OncePerRequestFilter {
         }
 
         filterChain.doFilter(request, response);
+    }
+
+    private SecretKey getKey() {
+        return Keys.hmacShaKeyFor(SECRET.getBytes(StandardCharsets.UTF_8));
     }
 }
